--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,18 @@ button i {
   color: white;
 }
 .middle-line {
-  border: gray 1px solid;
+  border: grey 1px solid;
   width: 0;
   height: 11rem;
   margin-left: 1rem;
   margin-right: 1rem;
   position: relative;
   top: 1rem;
+}
+.circle {
+  border: grey 1px solid;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+  bottom: 49%;
 }
