--- a/css/style.css
+++ b/css/style.css
@@ -43,18 +43,26 @@ button i {
   color: white;
 }
 .middle-line {
-  border: grey 1px solid;
+  border: silver 1px solid;
   width: 0;
   height: 11rem;
   margin-left: 1rem;
   margin-right: 1rem;
   position: relative;
   top: 1rem;
+  z-index: -1;
 }
 .circle {
-  border: grey 1px solid;
+  background-color: white;
+  border: silver 1px solid;
   border-radius: 50%;
-  width: 3rem;
-  height: 3rem;
-  bottom: 49%;
+  width: 2rem;
+  height: 2rem;
+  position: relative;
+  bottom: 4rem;
+  right: 2.4rem;
+  font-weight: bold;
+  text-align: center;
+  padding-top: 5px;
+  color: silver;
 }
