--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 /* Form styling */
 form {
-  margin: 20% auto;
+  margin: 10% auto;
   width: 50%;
   height: 50%;
 }
@@ -84,27 +84,27 @@ legend + div i {
   font-size: 1.5rem;
   font-weight: bold;
   color: slategray;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.3rem;
 }
 #sign-in {
   font-size: 2.5rem;
   text-align: center;
   color: slategray;
 }
-.checkbox input,
-#submit-button {
+.checkbox input {
   display: inline-block;
   font-size: 1.8rem;
 }
 
 #submit-button {
-  width: 9rem;
-  height: 3rem;
+  width: 7vw;
+  height: 5vh;
   position: relative;
-  bottom: 3.6rem;
-  left: 12rem;
+  bottom: 3vh;
+  left: 11vw;
   background-color: lightskyblue;
   color: white;
+  border-radius: 5px;
 }
 .click-buttons {
   width: 100%;
