--- a/css/style.css
+++ b/css/style.css
@@ -84,16 +84,18 @@ legend + div i {
   font-size: 1.5rem;
   font-weight: bold;
   color: slategray;
-  margin-bottom: 1.3rem;
+  margin-bottom: 2vh;
 }
 #sign-in {
   font-size: 2.5rem;
   text-align: center;
   color: slategray;
 }
-.checkbox input {
+.checkbox input,
+.checkboxinput[label] {
   display: inline-block;
-  font-size: 1.8rem;
+  font-size: 1rem;
+  top: 3vh;
 }
 
 #submit-button {
@@ -109,4 +111,7 @@ legend + div i {
 .click-buttons {
   width: 100%;
   height: 20%;
+  display: flexbox;
+  justify-content: center;
+  align-items: center;
 }
