working on css file/ checkbox and submit button

--- a/css/style.css
+++ b/css/style.css
@@ -84,25 +84,25 @@ legend + div i {
   font-size: 1.5rem;
   font-weight: bold;
   color: slategray;
-  margin-bottom: 2vh;
+  margin-bottom: 1.5vh;
 }
 #sign-in {
   font-size: 2.5rem;
   text-align: center;
   color: slategray;
+  margin-top: 3rem;
 }
-.checkbox input,
-.checkboxinput[label] {
+.checkbox input {
   display: inline-block;
   font-size: 1rem;
-  top: 3vh;
+  margin-top: 3rem;
 }
 
 #submit-button {
   width: 7vw;
   height: 5vh;
   position: relative;
-  bottom: 3vh;
+  bottom: 7vh;
   left: 11vw;
   background-color: lightskyblue;
   color: white;
