--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ legend + div i {
   height: 5vh;
   position: relative;
   bottom: 6.5vh;
-  left: 11vw;
+  left: 13vw;
   background-color: lightskyblue;
   color: white;
   border-radius: 5px;
@@ -121,7 +121,17 @@ legend + div i {
 .click-buttons {
   width: 100%;
   height: 20%;
-  display: flexbox;
-  justify-content: center;
-  align-items: center;
+  padding-top: 2vh;
+  padding-left: 15.5vw;
+  font-size: 2rem;
+  color: silver;
+}
+.click-buttons button {
+  width: 10vw;
+  height: 4vh;
+  font-family: "Akaya Telivigala", cursive, sans-serif;
+  font-size: 1.5rem;
+  color: rgb(4, 171, 248);
+  background-color: white;
+  border: white;
 }
