--- a/css/style.css
+++ b/css/style.css
@@ -13,18 +13,29 @@
 }
 /* Body styling */
 body {
-  width: 100vw;
-  height: 100vh;
+  width: 90vw;
+  height: 90vh;
   font-family: "Akaya Telivigala", cursive, sans-serif;
 }
 /* Form styling */
 form {
-  margin: 10% auto;
-  width: 54%;
-  height: 54%;
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-template-rows: repeat(3, 1fr);
+  border: blue 1px dashed;
+  grid-template-areas: 
+  "top-area top-area top-area"
+  "bottom-area bottom-area bottom-area";
 }
-form fieldset div {
-  display: inline-block;
+/* Top area styling */
+.top-area {
+  grid-area: top-area;
+}
+/* Bottom area */
+.bottom-area {
+  grid-area: bottom-area;
 }
 /* Left buttons styling */
 form fieldset div button {
