--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,9 @@
 }
 /* Body styling */
 body {
-  width: 90vw;
-  height: 90vh;
+  width: 54vw;
+  height: 54vh;
+  margin: 10px auto;
   font-family: "Akaya Telivigala", cursive, sans-serif;
 }
 /* Form styling */
@@ -24,14 +25,31 @@ form {
   display: grid;
   grid-template-columns: repeat(2,1fr);
   grid-template-rows: repeat(3, 1fr);
-  border: blue 1px dashed;
   grid-template-areas: 
   "top-area top-area top-area"
   "bottom-area bottom-area bottom-area";
 }
 /* Top area styling */
 .top-area {
+  width: 100%;
+  height: 100%;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
   grid-area: top-area;
+  grid-template-areas: 
+  "left-section center-section right-section";
+}
+/* Left section */
+.left-section {
+  grid-area: left-section;
+}
+/* Center section */
+.center-section {
+  grid-area: center-section;
+}
+/* Right section */
+.right-section {
+  grid-area: right-section;
 }
 /* Bottom area */
 .bottom-area {
