--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ form {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(3, 1fr);
   grid-template-areas: 
   "top-area top-area top-area"
@@ -31,11 +31,9 @@ form {
 }
 /* Top area styling */
 .top-area {
-  width: 100%;
-  height: 100%;
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
   grid-area: top-area;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   grid-template-areas: 
   "left-section center-section right-section";
 }
@@ -57,7 +55,7 @@ form {
 }
 /* Left buttons styling */
 form fieldset div button {
-  display: block;
+  /* display: grid; */
   width: 20vw;
   height: 10vh;
   margin: 3rem;
@@ -91,10 +89,10 @@ button i {
   border: silver 1px solid;
   width: 0;
   height: 40vh;
-  margin-left: 1rem;
+  /* margin-left: 1rem;
   margin-right: 1rem;
   position: relative;
-  top: 4vh;
+  top: 4vh; */
   opacity: 0.8;
   z-index: -1;
 }
@@ -103,11 +101,11 @@ button i {
   background-color: white;
   border: silver 1px solid;
   border-radius: 50%;
-  width: 3rem;
+  /* width: 3rem;
   height: 3rem;
   position: relative;
   bottom: 9.5rem;
-  right: 2.9rem;
+  right: 2.9rem; */
   font-weight: bold;
   text-align: center;
   font-size: larger;
@@ -119,8 +117,8 @@ button i {
 input,
 .checkbox,
 legend + div i {
-  display: block;
-  position: relative;
+  /* display: block;
+  position: relative; */
   font-size: 1.5rem;
   font-weight: bold;
   color: slategray;
@@ -148,7 +146,7 @@ legend + div i {
 }
 /* Checkbox and label */
 .checkbox input {
-  display: inline-block;
+  /* display: inline-block; */
   font-size: 1rem;
   margin-top: 3rem;
 }
@@ -156,7 +154,7 @@ legend + div i {
 #submit-button {
   width: 7vw;
   height: 5vh;
-  position: relative;
+  /* position: relative; */
   bottom: 6.5vh;
   left: 13vw;
   background-color: lightskyblue;
