--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ form {
 .left-section button { 
   width: 20vw;
   height: 10vh;
-  margin: 1rem;
+  margin: 2rem;
   border-radius: 1rem;
   display: flex;
   justify-content: center;
@@ -94,9 +94,8 @@ button i {
 .middle-line {
   border: silver 1px solid;
   width: 0;
-  height: 40vh;
+  height: 25rem;
   margin: 5rem 2rem 2rem 2rem;
-  
   opacity: 0.8;
   z-index: -1;
 }
@@ -107,8 +106,9 @@ button i {
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
-  bottom: 9.5rem;
-  right: 2.9rem;
+  position: relative;
+  bottom: 16rem;
+  left: 0.5rem;
   font-weight: bold;
   text-align: center;
   font-size: larger;
@@ -120,20 +120,19 @@ button i {
 input,
 .checkbox,
 legend + div i {
-  display: block;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1.5rem;
   font-weight: bold;
   color: slategray;
-  margin-bottom: 1.5vh;
+  margin-bottom: 1.5rem;
 }
 /* Legend text */
 #sign-in {
   font-size: 2.5rem;
   text-align: center;
   color: slategray;
-  margin-top: 3rem;
-  margin-right: 2rem;
 }
 /* Right side input area */
 .user {
@@ -144,12 +143,14 @@ legend + div i {
 }
 /* User and user-lock logos */
 legend + div i {
-  bottom: -4vh;
+  position: relative;
+  bottom: -3rem;
   z-index: 1;
 }
 /* Checkbox and label */
 .checkbox input {
-  display: inline-block;
+  position: relative;
+  right: 6rem;
   font-size: 1rem;
   margin-top: 3rem;
 }
@@ -158,8 +159,8 @@ legend + div i {
   width: 7vw;
   height: 5vh;
   position: relative;
-  bottom: 6.5vh;
-  left: 13vw;
+  bottom: 5rem;
+  left: 15rem;
   background-color: lightskyblue;
   color: white;
   border: lightskyblue;
